--- a/WMcomm-business.html
+++ b/WMcomm-business.html
@@ -26,6 +26,37 @@
         </div>
     </nav>
     <main>
+        <aside>
+            <h2>Inquiries</h2>
+            <form method="post"><!--Add an action for this form, aka a place for it to send and confirmation-->
+                <label for="fname">First name</label>
+                  <input type="text" id="fname" name="firstname" placeholder="Ex: John" required><br>
+                <label for="lname">Last name</label>
+                  <input for="lname" id="lname" name="lastname" placeholder="Ex: Doe" required><br>
+                <label for="email">Email</label>
+                  <input type="email" id="email" name="email" placeholder="Ex: JohnDoe@WindowMastersNanaimo.com" required><br>
+                <label for="phone">Phone number</label>
+                  <input type="tel" id="phone" name="phone" placeholder="Ex: 250-xxx-xxxx">
+                <label for="typeinquiry">Type of inquiry</label>
+                  <select size="1" name="typeinquiry" id="typeinquiry">
+                      <option>Select type of inquiry</option>
+                      <option value="residential">Residential</option>
+                      <option value="commercial">Commercial</option>
+                      <option value="strata">Strata</option>
+                      <option value="other">Other</option>
+                  </select>
+                <label for="service">Services</label><br>
+                  <input type="radio" name="siding" id="siding" value="siding">Siding
+                  <input type="radio" name="windows" id="windows" value="windows">Windows<br>
+                  <input type="radio" name="concrete" id="concrete" value="concrete">Concrete
+                  <input type="radio" name="demoss" id="demoss" value="demoss">De-Mossing<br>
+                  <input type="radio" name="deck" id="deck" value="deck">Deck cleaning
+                  <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
+                  <input type="radio" name="other" id="other" value="other">Other<br>
+                <label for="comments">Comments</label>
+                  <input type="text" id="comments" name="comments">
+            </form>
+        </aside>
     </main>
     <footer>
     </footer>
