Strata html "done"

--- a/WMstrata.html
+++ b/WMstrata.html
@@ -57,6 +57,132 @@
                   <input type="text" id="comments" name="comments">
             </form>
         </aside>
+        <div>
+          <!--Code scrolling images of before/after photos-->
+        </div>
+        <div>
+          <h2>Strata Discount's</h2>
+          <p>When you book job's for your strata through Window Masters Nanaimo 
+            we offer discounts based on how many units are being done and what 
+            services they require. For any questions or inquiry's please use 
+            the "Inquiry" form.
+          </p>
+        </div>
+        <article>
+          <h3>Exterior Cleaning</h3>
+          <p>Exterior cleaning is important for the longevity of your property. 
+            As such your property deserves the best cleaning process available. 
+            Window Masters Nanaimo offers an amazing process, this process is:
+          </p><br>
+          <ol type="1">
+            <li>Green biodegradable non-harmful pre-wash sprayed on with powerwasher</li>
+            <li>Using extention poles with a micro-fiber brush head we will scrub the:
+               siding, outside gutters, and soffits on your home.
+            </li>
+            <li>Then to finish it all off we will rinse the walls to get any loose algae off.</li>
+          </ol><br>
+          <p>We pride ourselves in how well we will clean your home and by using our 
+            process you shouldn't need your house cleaned for atleast x years!
+          </p>
+        </article>
+        <article>
+          <h3>Interior/Exterior Windows</h3>
+          <p>We started our business on windows. This is something we do better then 
+            anyone else. The process we use for your windows is:
+          </p><br>
+          <ol type="1">
+            <li>We use our microfiber brushes to lightly brush the outside windows</li>
+            <li>Then we blow out any tracks in the outside windows with our nosel</li>
+            <li>After the track is blown out we wipe it sparkling clean with a cloth</li>
+            <li>We then use our solution and a window microfiber scrub pad and squeegee 
+              to make sure the window is completely cleaned
+            </li>
+            <li>Afterwards we will take any of the screens from your windows and 
+              use the microfiber scrub pad and our nosel to clean those as well.
+            </li>
+          </ol><br>
+          <p>Our window process is tried and true, we have been using it for X amount of 
+            years and constantly here from our customers that it leaves their windows 
+            cleaner then they have ever seen.
+          </p>
+        </article>
+        <article>
+          <h3>Deck Cleaning</h3>
+          <p>When it comes to cleaning your deck we will make sure it shines. 
+            We will clean every part of your deck such as:
+          </p><br>
+          <ul>
+            <li>Stairs</li>
+            <li>Railing</li>
+            <li>Glass panels</li>
+            <li>Stilts</li>
+            <li>Any other component that your deck has</li>
+          </ul><br>
+          <p>Our process to cleaning your deck is any combination of the processes 
+            we have for our other services. We will always make sure everything we 
+            do is pristine and as clean as it can get.
+          </p>
+        </article>
+        <article>
+          <h3>De-mossing</h3>
+          <p>We starting de-mossing X years ago. Since then we have been improving 
+            how we do things and have a fantastic process so we can offer the best 
+            possible service. Our process is:
+          </p><br>
+          <ol type="1">
+            <li></li><!--Try to contact Aaron on what their process for this is-->
+          </ol>
+          <p>When it comes to de-mossing make sure you are hiring someone you can trust. 
+            We have hundreds of customers that would back us up when we say that we are 
+            that trustworthy someone.
+          </p>
+        </article>
+        <article>
+          <h3>Gutters</h3>
+          <p>When it comes to gutters we will make sure that they are pristine. 
+            We have lots of experience with gutters and have a process that 
+            continues to prove that it is efficient and allows us to make sure 
+            your gutters are in tip top shape. Our process is:
+          </p><br>
+          <ol type="1">
+            <li>We take a look at the gutters with our camera</li>
+            <li>Then we suck up as much of the stuff as possible with a shop vaccum 
+              that has a camera so we can see that it is coming clean
+            </li>
+            <li>After using the shop vaccum if there was any debree remaining we will 
+              go up with our ladder to make sure its all cleaned out
+            </li>
+          </ol>
+          <p>We will make sure that your gutters will be unclogged and cleaned. We 
+            also do not dispose of the gutter contents in your lawn. We will have a 
+            place to dispose of it.
+          </p>
+        </article>
+        <article>
+          <h3>Concrete</h3>
+          <p>Concrete is something that if not done properly can cause many 
+            issues down the road. We will make sure it is proffesionally cleaned 
+            and no spots are left dirty. Our process of concrete cleaning is:
+          </p><br>
+          <ol type="1">
+            <li>We will assess the concrete by walking around and finding our 
+              starting point
+            </li>
+            <li>Then we use our heavy duty power washer and choose which of the 
+              nosel's are appropriate for the job
+            </li>
+            <li>We then power wash every inch of concrete perfectly to make sure 
+              there is no spot left unclean
+            </li>
+            <li>We then make sure to rinse it all of so there isnt a bunch of 
+              moss etc. on your freshly cleaned concrete
+            </li>
+          </ol>
+          <p>We will make sure the concrete will not be at risk of erosion and crumbling. 
+            We will also make sure to point out any issues that may arise if the concrete 
+            was not taken care of beforehand.
+          </p>
+        </article>
     </main>
     <footer>
     </footer>
