more css and touchups for residential page

--- a/WMresidential.html
+++ b/WMresidential.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
     <main>
-        <aside>
+        <aside class="inquiry">
             <h2>Inquiries</h2>
             <form method="post"><!--Add an action for this form, aka a place for it to send and confirmation-->
                 <label for="fname">First name</label>
@@ -53,52 +53,53 @@
                   <input type="radio" name="deck" id="deck" value="deck">Deck cleaning
                   <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
                   <input type="radio" name="other" id="other" value="other">Other<br>
-                <label for="comments">Comments</label>
-                  <input type="text" id="comments" name="comments">
+                Comments:<br>
+                <textarea name="comments" id="comments"></textarea>
             </form>
         </aside>
         <div>
           <!--Code scrolling images of before/after photos-->
         </div>
-        <article>
+        <div class="resservices">
+        <article class="ressectionleft">
           <h3>Exterior Cleaning</h3>
           <p>Exterior cleaning is important for the longevity of your property. 
             As such your property deserves the best cleaning process available. 
             Window Masters Nanaimo offers an amazing process, this process is:
           </p><br>
           <ol type="1">
-            <li>Green biodegradable non-harmful pre-wash sprayed on with powerwasher</li>
+            <li>Green biodegradable non-harmful pre-wash sprayed on with powerwasher</li><br>
             <li>Using extention poles with a micro-fiber brush head we will scrub the:
                siding, outside gutters, and soffits on your home.
-            </li>
-            <li>Then to finish it all off we will rinse the walls to get any loose algae off.</li>
+            </li><br>
+            <li>Then to finish it all off we will rinse the walls to get any loose algae off.</li><br>
           </ol><br>
           <p>We pride ourselves in how well we will clean your home and by using our 
             process you shouldn't need your house cleaned for atleast x years!
           </p>
         </article>
-        <article>
+        <article class="ressectionmid">
           <h3>Interior/Exterior Windows</h3>
           <p>We started our business on windows. This is something we do better then 
             anyone else. The process we use for your windows is:
           </p><br>
           <ol type="1">
-            <li>We use our microfiber brushes to lightly brush the outside windows</li>
-            <li>Then we blow out any tracks in the outside windows with our nosel</li>
-            <li>After the track is blown out we wipe it sparkling clean with a cloth</li>
+            <li>We use our microfiber brushes to lightly brush the outside windows</li><br>
+            <li>Then we blow out any tracks in the outside windows with our nosel</li><br>
+            <li>After the track is blown out we wipe it sparkling clean with a cloth</li><br>
             <li>We then use our solution and a window microfiber scrub pad and squeegee 
               to make sure the window is completely cleaned
-            </li>
+            </li><br>
             <li>Afterwards we will take any of the screens from your windows and 
               use the microfiber scrub pad and our nosel to clean those as well.
-            </li>
+            </li><br>
           </ol><br>
           <p>Our window process is tried and true, we have been using it for X amount of 
             years and constantly here from our customers that it leaves their windows 
             cleaner then they have ever seen.
           </p>
         </article>
-        <article>
+        <article class="ressectionright">
           <h3>Deck Cleaning</h3>
           <p>When it comes to cleaning your deck we will make sure it shines. 
             We will clean every part of your deck such as:
@@ -115,7 +116,9 @@
             do is pristine and as clean as it can get.
           </p>
         </article>
-        <article>
+        </div>
+        <div class="resservices">
+        <article class="ressectionleft">
           <h3>De-mossing</h3>
           <p>We starting de-mossing X years ago. Since then we have been improving 
             how we do things and have a fantastic process so we can offer the best 
@@ -129,7 +132,7 @@
             that trustworthy someone.
           </p>
         </article>
-        <article>
+        <article class="ressectionmid">
           <h3>Gutters</h3>
           <p>When it comes to gutters we will make sure that they are pristine. 
             We have lots of experience with gutters and have a process that 
@@ -137,20 +140,20 @@
             your gutters are in tip top shape. Our process is:
           </p><br>
           <ol type="1">
-            <li>We take a look at the gutters with our camera</li>
+            <li>We take a look at the gutters with our camera</li><br>
             <li>Then we suck up as much of the stuff as possible with a shop vaccum 
               that has a camera so we can see that it is coming clean
-            </li>
+            </li><br>
             <li>After using the shop vaccum if there was any debree remaining we will 
               go up with our ladder to make sure its all cleaned out
-            </li>
+            </li><br>
           </ol>
           <p>We will make sure that your gutters will be unclogged and cleaned. We 
             also do not dispose of the gutter contents in your lawn. We will have a 
             place to dispose of it.
           </p>
         </article>
-        <article>
+        <article class="ressectionright">
           <h3>Concrete</h3>
           <p>Concrete is something that if not done properly can cause many 
             issues down the road. We will make sure it is proffesionally cleaned 
@@ -159,22 +162,23 @@
           <ol type="1">
             <li>We will assess the concrete by walking around and finding our 
               starting point
-            </li>
+            </li><br>
             <li>Then we use our heavy duty power washer and choose which of the 
               nosel's are appropriate for the job
-            </li>
+            </li><br>
             <li>We then power wash every inch of concrete perfectly to make sure 
               there is no spot left unclean
-            </li>
+            </li><br>
             <li>We then make sure to rinse it all of so there isnt a bunch of 
               moss etc. on your freshly cleaned concrete
-            </li>
+            </li><br>
           </ol>
           <p>We will make sure the concrete will not be at risk of erosion and crumbling. 
             We will also make sure to point out any issues that may arise if the concrete 
             was not taken care of beforehand.
           </p>
         </article>
+        </div>
     </main><!--No more FAQ section as I think it is answered in the articles-->
     <footer><!--Copy from main page-->
     </footer>
