--- a/WMstrata.html
+++ b/WMstrata.html
@@ -53,8 +53,8 @@
                   <input type="radio" name="deck" id="deck" value="deck">Deck cleaning
                   <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
                   <input type="radio" name="other" id="other" value="other">Other<br>
-                <label for="comments">Comments</label>
-                  <input type="text" id="comments" name="comments">
+                Comments:<br>
+                <textarea name="comments" id="comments"></textarea>
             </form>
         </aside>
         <div>
