Home page mostly done

--- a/WMhome.html
+++ b/WMhome.html
@@ -5,12 +5,15 @@
     <title>Window Masters Nanaimo</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="WMstyle.css" type="text/css">
-    <!--link rel="icon" href="image/favicon.ico" type="image/x-icon"-->
+    <link rel="icon" href="images/faviconWM.png" type="image/x-icon">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+    </style>
 
 </head>
 <body>
     <header class="titles">
-        <!--<a href="WMhome.html"><img src="image/digital-logo.png" alt="Window Masters Nanaimo" width="100"></a>-->
+        <a href="WMhome.html"><img src="images/Windowmasterslogo.png" alt="Window Masters Nanaimo" width="100"></a>
         <h1>Window Masters Nanaimo</h1>
         <div>Contact info</div>
     </header>
@@ -122,7 +125,7 @@
         </div>
           <h2>Why Choose Us</h2>
         <div class="whychooseus">
-        <article class="sectionleft">
+        <article class="knowhow">
             <h3>We know our stuff</h3>
             <p>We have been in the exterior cleaning business for X years. We have taken tons of advise from 
                 peers and have offer the safest and most lasting solution we can. Year after year we are always 
@@ -130,7 +133,7 @@
                 the best experience possible.
             </p>
         </article>
-        <article class="sectionmid">
+        <article class="harm">
             <h3>Don't Harm Your Property</h3>
             <p>One of the things we pride ourselves on the most is our process and part of this process is the 
                 products we use. We use a biodegradable pre-wash that is completely safe and will not damage your 
@@ -139,14 +142,14 @@
                 all of the groves and give it a full clean.
             </p>
         </article>
-        <article class="sectionmid">
+        <article class="friendly">
             <h3>Friendly & Dedicated</h3>
             <p>We pride ourselves on offering a full, great experience. This starts with introduction 
                 we are super friendly and easy to get along with. We also are extremely dedicated to our 
                 work so if you ever have concernes or questions we will happily answer them.
             </p>
         </article>
-        <article class="sectionright">
+        <article class="localbusiness">
             <h3>Local Business</h3>
             <p>Ontop of everything else we have to offer we are a local business. By employing us you are 
                 employing people from your community. Based out of Nanaimo we have so far done 1000's of exterior 
