--- a/WMresidential.html
+++ b/WMresidential.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <header class="titles">
-        <!--<a href="WMhome.html"><img src="image/digital-logo.png" alt="Window Masters Nanaimo" width="100"></a>-->
-        <h1>Residential</h1>
+        <a href="WMhome.html"><img src="images/Windowmasterslogo.png" alt="Window Masters Nanaimo" width="100"></a>
+        <a href="WMhome.html"><img src="images/Windowmasterstext.png" alt="Window Masters" width="250"></a>
         <div>Contact info</div>
     </header>
+    <h1 class="titles">Residential</h1>
     <nav class="wrap">
         <div><!--add class for css styling-->
             <ul>
