Residential done mostly

--- a/WMresidential.html
+++ b/WMresidential.html
@@ -5,7 +5,10 @@
     <title>Window Masters Nanaimo</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="WMstyle.css" type="text/css">
-    <!--link rel="icon" href="image/favicon.ico" type="image/x-icon"-->
+    <link rel="icon" href="images/faviconWM.png" type="image/x-icon">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Condensed:wght@700&display=swap');
+    </style>
 
 </head>
 <body>
@@ -27,6 +30,11 @@
         </div>
     </nav>
     <main>
+      <div class="wrap">
+      <div class="beforeafter">
+        <h2>BEFORE   /</h2>
+        <h2>/   AFTER</h2>
+      </div>
         <aside class="inquiry">
             <h2>Inquiries</h2>
             <form method="post"><!--Add an action for this form, aka a place for it to send and confirmation-->
@@ -58,11 +66,12 @@
                 <textarea name="comments" id="comments"></textarea>
             </form>
         </aside>
+        </div>
         <div>
           <!--Code scrolling images of before/after photos-->
         </div>
         <div class="resservices">
-        <article class="ressectionleft">
+        <article class="ressectionlefttop">
           <h3>Exterior Cleaning</h3>
           <p>Exterior cleaning is important for the longevity of your property. 
             As such your property deserves the best cleaning process available. 
@@ -79,7 +88,7 @@
             process you shouldn't need your house cleaned for atleast x years!
           </p>
         </article>
-        <article class="ressectionmid">
+        <article class="ressectionmidtop">
           <h3>Interior/Exterior Windows</h3>
           <p>We started our business on windows. This is something we do better then 
             anyone else. The process we use for your windows is:
@@ -100,7 +109,7 @@
             cleaner then they have ever seen.
           </p>
         </article>
-        <article class="ressectionright">
+        <article class="ressectionrighttop">
           <h3>Deck Cleaning</h3>
           <p>When it comes to cleaning your deck we will make sure it shines. 
             We will clean every part of your deck such as:
@@ -119,7 +128,7 @@
         </article>
         </div>
         <div class="resservices">
-        <article class="ressectionleft">
+        <article class="ressectionleftbottom">
           <h3>De-mossing</h3>
           <p>We starting de-mossing X years ago. Since then we have been improving 
             how we do things and have a fantastic process so we can offer the best 
@@ -133,7 +142,7 @@
             that trustworthy someone.
           </p>
         </article>
-        <article class="ressectionmid">
+        <article class="ressectionmidbottom">
           <h3>Gutters</h3>
           <p>When it comes to gutters we will make sure that they are pristine. 
             We have lots of experience with gutters and have a process that 
@@ -154,7 +163,7 @@
             place to dispose of it.
           </p>
         </article>
-        <article class="ressectionright">
+        <article class="ressectionrightbottom">
           <h3>Concrete</h3>
           <p>Concrete is something that if not done properly can cause many 
             issues down the road. We will make sure it is proffesionally cleaned 
